src/ManifestsK8s/boards-k8s/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardsk8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boardsk8s
  template:
    metadata:
      labels:
        app: boardsk8s
    spec:
      serviceAccount: web
      containers:
        - name: container-boardsk8s
          image: fspelling/boardk8s:v5
          ports:
            - containerPort: 8080
