src/ManifestsK8s/boards-k8s/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boardsk8s
spec:
  selector:
    app: boardsk8s
  ports:
  - name: http
    port: 80
    targetPort: 8080
